# qfftexplorer

./: ProjectHome.md  README.md
src/: HelpText.h  HelpWidgetGUI.h  HelpWidgetGUI.ui  Makefile.am  PieGraph.xpm  Thumbs.db  dataprocessor.cpp  dataprocessor.h  deltatimemeasure.cpp  deltatimemeasure.h  fftexplorergui.cpp  fftexplorergui.h  fftexplorergui.ui.h  fftexplorerwin.h  helpwidget.cpp  helpwidget.h  initfilehandler.cpp  initfilehandler.h  mulawconverter.cpp  scopepane.h  workthread.cpp
trunk/: AUTHORS  INSTALL  config.h  fftexplorer.pro
trunk/src/: HelpWidgetGUI.cpp  HelpWidgetGUI4.ui  Makefile.in  ScopePaneGUI.cpp  ScopePaneGUI.h  ScopePaneGUI.ui  ScopePaneGUI4.ui  displaypanelgui.cpp  displaypanelgui.h  fftexplorergui.ui  fftexplorergui4.ui  fftexplorerui.rc  fftexplorerwin.cpp  main.cpp  quickfft.cpp  quickfft.h  scopepane.cpp  workthread.h
